Bug 489706 - Remove custom Integer cache from P2
The OmniVersion provides a custom Integer cache, which apart from
storing the MAX_VALUE has no additional benefit over and above using the
built-in Integer cache. Replace calls to new Integer() with
Integer.valueOf()

Change-Id: Ibbcc0072a103bd16c7ef1e86a7962b9d88a5c1cb
Signed-off-by: Alex Blewitt <alex.blewitt@gmail.com>